@@ -20,7 +20,6 @@ struct stats {
 
 struct settings {
     unsigned long long maxbytes;
-    int maxitems;
     int maxconns;
     int port;
     struct in_addr interface;
